--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "dashjs-webos5-legacy",
-    "version": "5.0.1",
-    "description": "dash.js fork targeting webOS 5 and Chromium 68 compatibility, with adjustments for older JavaScript support.",
+    "name": "dashjs-webos5",
+    "version": "5.0.101",
+    "description": "dash.js fork targeting webOS 5 and Chromium 68 compatibility, with adjustments for webos 3 and 4",
     "author": "Esteban Díaz <esteban.diazt23@gmail.com>",
     "license": "BSD-3-Clause",
     "exports": {
@@ -63,6 +63,8 @@
     "devDependencies": {
         "@babel/core": "^7.26.0",
         "@babel/eslint-parser": "^7.24.1",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+        "@babel/plugin-proposal-optional-chaining": "^7.21.0",
         "@babel/plugin-transform-parameters": "^7.25.9",
         "@babel/plugin-transform-runtime": "^7.25.9",
         "@babel/preset-env": "^7.24.4",
