--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "dashjs-webos5",
     "version": "5.0.101",
     "description": "dash.js fork targeting webOS 5 and Chromium 68 compatibility, with adjustments for webos 3 and 4",
-    "author": "Esteban Díaz <esteban.diazt23@gmail.com>",
+    "author": "Esteban Díaz <esteban.diazt23@gmail.com>, Dash Industry Forum",
     "license": "BSD-3-Clause",
     "exports": {
         ".": {
@@ -120,7 +120,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/Dash-Industry-Forum/dash.js.git"
+        "url": "https://github.com/ediaz23/dashjs-webos5-legacy.git"
     },
     "files": [
         "githook.cjs",
