--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/ediaz23/dashjs-webos5-legacy.git"
+        "url": "git+https://github.com/ediaz23/dashjs-webos5-legacy.git"
     },
     "files": [
         "index.d.ts",
